--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
-<p>
-  <a [routerLink]="['block1']">Block 1</a>
-  <a routerLink="block2">Block 2</a>
-</p>
+<ul>
+  <li><a routerLink="block1">Block 1 (no route params)</a></li>
+  <li><a [routerLink]="['block1', 1]">Block 1 (['block1', 1])</a></li>
+  <li><a routerLink="block1/2">Block 1 (block1/2)</a></li>
+  <li><a routerLink="block2">Block 2 (no query params)</a></li>
+  <li><a routerLink="block2" [queryParams]="{id: 1}">Block 2 ([queryParams]=id:1)</a></li>
+</ul>
 <router-outlet></router-outlet>
