--- a/src/app/block1/block1.component.html
+++ b/src/app/block1/block1.component.html
@@ -1,3 +1,6 @@
 <p>
-  Block #1, id={{id}}
+  Block #1, id={{id}}, x={{x}}, y={{y}}, fragment={{fragment}}
 </p>
+<p>{{appUrl}}</p>
+<p><button (click)="goToBlock2()">Go To Block 2 (No Query Param)</button></p>
+<p><button (click)="goToBlock2(1)">Go To Block 2 (id=1)</button></p>
