Added a route guard example

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
   <li><a routerLink="block3/block4">Block 3 / Block 4</a></li>
   <li><a routerLink="block3/block5">Block 3 / Block 5</a></li>
   <li><a [routerLink]="[{outlets: {outlet2: ['block6']}}]">Block 6</a></li>
+  <li><a routerLink="block7">Block 7 (with Guard)</a></li>
   <li><a routerLink="blockX">Block X</a></li>
 </ul>
 <router-outlet></router-outlet>
